2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* msgcat.c (main): Move the option checking after the handling of
	--version and --help, but before opening of any file.
	* msgcomm.c (main): Move the option checking after the handling of
	--version and --help.
	* msguniq.c (main): Likewise.
	* xgettext.c (main): Likewise.
	* msgconv.c (main): Additional option checking for --sort-by-file.
	* msgen.c (main): Likewise.
	* msgexec.c (main): Likewise.
	* msggrep.c (main): Likewise.
	* msgmerge.c (main): Likewise.

2001-09-08  Bruno Haible  <haible@clisp.cons.org>

	* dir-list.c: Include specification header before all other headers.
	* file-list.c: Likewise.
	* message.c: Likewise.
	* msgl-cat.c: Likewise.
	* msgl-charset.c: Likewise.
	* msgl-iconv.c: Likewise.
	* open-po.c: Likewise.
	* po.c: Likewise.
	* po-gram-gen.y: Likewise.
	* po-hash-gen.y: Likewise.
	* po-lex.c: Likewise.
	* read-po.c: Likewise.
	* str-list.c: Likewise.
	* write-mo.c: Likewise.
	* write-po.c: Likewise.
	* msgfmt.h: Don't include message.h.
	* open-po.h: Include <stdio.h>, for FILE.
	* write-mo.h: Include message.h and <stddef.h>.

2001-09-21  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l (create_char_buf): Fix problem with empty messages.
	(//): Remove leading "//" from result.
	(x_java_keyword): Handle NULL argument.

2001-09-19  Tommy Johansson  <tommy.johansson@kanalen.org>

	* x-java.l (is_keyword): Swap arguments of do_compare.

2001-09-02  Bruno Haible  <haible@clisp.cons.org>

	* write-java.h: New file.
	* write-java.c: New file.
	* plural.c: New file.
	* msgfmt.c: Include write-java.h.
	(java_mode, assume_java2, java_resource_name, java_locale_name,
	java_class_directory): New variables.
	(long_options): Add --java, --java2, --locale, --resource.
	(main): Add command line option -d, -j, -l, -r. Handle them and
	--java2. Forbid some options depending on whether --java was given
	or not. In java_mode, call msgdomain_write_java.
	(usage): Update.